--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,33 +4,35 @@
 
 
 .rst__rowContents {
-    min-width: 150px !important;
+  min-width: 150px !important;
 }
-.rst__moveHandle{
-    width: 24px !important;
+
+.rst__moveHandle {
+  width: 24px !important;
 }
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Public+Sans:ital,wght@0,200;1,200&display=swap');
 
 
 @font-face {
-    font-family: 'Public Sans';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../public//fonts/Public_Sans/PublicSans-VariableFont_wght.ttf') format('ttf'),
-         url('../public//fonts/Public_Sans/PublicSans-Italic-VariableFont_wght.ttf') format('ttf');
-  }
-  
-  @font-face {
-    font-family: 'Public Sans';
-    font-style: normal;
-    font-weight: 700;
-    src: url('../public//fonts/Public_Sans/PublicSans-VariableFont_wght.ttf') format('ttf'),
+  font-family: 'Public Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../public//fonts/Public_Sans/PublicSans-VariableFont_wght.ttf') format('ttf'),
     url('../public//fonts/Public_Sans/PublicSans-Italic-VariableFont_wght.ttf') format('ttf');
-  }
+}
 
-  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
-  
-  /* Works for Chrome, Safari, Edge, Opera */
+@font-face {
+  font-family: 'Public Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../public//fonts/Public_Sans/PublicSans-VariableFont_wght.ttf') format('ttf'),
+    url('../public//fonts/Public_Sans/PublicSans-Italic-VariableFont_wght.ttf') format('ttf');
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+
+/* Works for Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -39,6 +41,18 @@ input::-webkit-inner-spin-button {
 
 /* Works for Firefox */
 input[type="number"] {
-    -moz-appearance: textfield;
-  }
-  
+  -moz-appearance: textfield;
+}
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+/* .scrollbar-hide::-webkit-scrollbar {
+      display: none;
+    } */
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  /* -ms-overflow-style: none; */
+  /* IE and Edge */
+  /* scrollbar-width: none; */
+  /* Firefox */
+}
