--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,9 +67,37 @@ input[type="number"] {
 }
 
 .css-1u4zpwo-MuiSvgIcon-root-MuiStepIcon-root {
-  font-size: 1.8rem;
+  font-size: 2.5rem;
 }
 
 .css-z7uhs0-MuiStepConnector-line {
   border-top-width: 2px;
+}
+
+.rti--input {
+  width: 100%;
+}
+
+.rti--container {
+  height: 48px !important;
+}
+
+.accordion-item {
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+}
+
+.accordion-title {
+  cursor: pointer;
+  background-color: #f4f4f4;
+  padding: 10px;
+}
+
+.accordion-content {
+  padding: 10px;
+  display: none;
+}
+
+.accordion-item.active .accordion-content {
+  display: block;
 }
