--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,6 +111,26 @@ input[type="number"] {
   animation: spin 1s linear infinite;
 }
 
+.PhoneInputCountryFlag {
+  display: none !important;
+}
+
+.react-tel-input .form-control {
+  font-size: 16px;
+  background: #FFFFFF;
+  border: 1px solid #CACACA;
+  border-radius: 5px;
+  width: 300px;
+  outline: none;
+  padding: 11.5px 10px 10.5px 10px !important;
+  transition: box-shadow ease .25s, border-color ease .25s;
+  color: #495057;
+}
+
+.flag {
+  display: none;
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
