--- a/styles/globals.css
+++ b/styles/globals.css
@@ -131,6 +131,14 @@ input[type="number"] {
   display: none;
 }
 
+.block {
+  width: 98%;
+  height: 1px;
+  /* dashed border */
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23333' stroke-width='4' stroke-dasharray='6%2c 14' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+}
+
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
