--- a/styles/globals.css
+++ b/styles/globals.css
@@ -127,6 +127,35 @@ input[type="number"] {
   color: #495057;
 }
 
+/* React */
+
+.css-13cymwt-control {
+  padding: 5px;
+}
+
+.css-t3ipsp-control {
+  padding: 5px;
+}
+
+/* Custom dropdown arrow style */
+
+.textField {
+  background: #f7f7f7;
+  border: 1px solid #b1b1b1;
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding: 8px;
+  width: 100%;
+  height: 48px;
+  -webkit-appearance: none;
+  appearance: none;
+  -moz-appearance: none;
+  background-image: url('https://www.svgrepo.com/show/80156/down-arrow.svg');
+  background-repeat: no-repeat;
+  background-size: 14px 14px;
+  background-position: calc(100% - 16px);
+}
+
 .flag {
   display: none;
 }
