--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,8 +32,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 
-/* Works for Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
+Works for Chrome,
+Safari,
+Edge,
+Opera input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
@@ -43,6 +45,8 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+
 
 /* For Webkit-based browsers (Chrome, Safari and Opera) */
 /* .scrollbar-hide::-webkit-scrollbar {
@@ -160,12 +164,6 @@ input[type="number"] {
   display: none;
 }
 
-.block {
-  width: 98%;
-  height: 1px;
-  /* dashed border */
-  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23333' stroke-width='4' stroke-dasharray='6%2c 14' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
-}
 
 
 @keyframes spin {
